- Improved: On recipe page ingredients now can be added to shopping list with exclude option (#632)
- Improved: App now supports disabled stock feature and hides stock parts, same with recipes (#647)
- Improved: When adding an unknown barcode through purchase or inventory, note is saved (#644, #619)
- Improved: When adding an unknown barcode through purchase, amount and unit is saved (#644)
- Fixed: Recipe actions throwing errors (thanks @timhae!) (#646)
- Fixed: Simultaneous display of recipe photos and placeholder images
- Fixed: Behavior option "reduce app startup time" not working on Android 12+
- Fixed: Crash on recipe page because server somehow returns wrong floating point format (#652)
- Fixed: Floating action button not hidden in shopping mode
- Fixed: Occasionally dark toolbar menu icons in dark mode (thanks @martin-braun!) (#631)
- Fixed: Unintended length limit on bottom sheet for general text and number input (#657)
- Fixed: Occasional crashes on stock journal and master product page
- Fixed: Stores selection list not redesigned
- Fixed: Recipe preparation not displayed in certain conditions
- Fixed: Duplicate expired items on stock overview page with filters "expired" and "overdue"
- Fixed: Products without own stock not hidden in filters on stock overview page (#660)
- Fixed: Amount of products without own stock not hidden on stock overview page (#654)
- Fixed: Navigation bar color on devices without gesture navigation
- Fixed: Default due days after freezing applied on purchase when freezer location is set (#593)
- Fixed: Quick mode scanner started again just after navigating back from "choose product" page
- Fixed: (not F-Droid) Crash with ML Kit scanner after barcode was scanned
- Fixed: (not F-Droid) Crash with ML Kit scanner after transaction was successful (#639)

## 3.0.0

- New: Material You redesign with dynamic colors for Android 12+
- New: Replaced HTML editor for recipe and product descriptions (same like on grocy server)